--- a/client/views/index.html
+++ b/client/views/index.html
@@ -16,7 +16,7 @@
     <header>
         <div class="main-wrapper">
             <div class="h-line">
-                <h1>Reco Engine</h1>
+                <h1>Recon Engine</h1>
             </div>
             <div class="h-small">
                 Recommendations fast and seamless.
@@ -30,7 +30,7 @@
             <div class="main-wrapper">
                 <div class="two-col">
                     <div class="col">
-                        <h2>What's Reco Engine?</h2>
+                        <h2>What's Recon Engine?</h2>
                         <p>
                             Recommeder engines are used in every business nowadays. We integrate a fully-working artificial inteligence based recommender engine into your business and enable you to skyrocket your sales!
                         </p>
@@ -81,6 +81,39 @@
                 </div>
             </div>
         </section>
+        <section class="s-1">
+            <div class="main-wrapper">
+                <h2>Features</h2>
+                <div class="two-col">
+                    <div class="col">
+                        <div class="card">
+                            <div class="card-heading">Cloud Based</div>
+                            <div class="card-text">We are fully cloud based. We operate in the cloud and store everything in the cloud.</div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <div class="card-heading">Machine Learning</div>
+                            <div class="card-text">For your recommender engine we use state of the art machine learning tools.</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="two-col">
+                    <div class="col">
+                        <div class="card">
+                            <div class="card-heading">Fast</div>
+                            <div class="card-text">We use algorithms for our recommender engine that are very fast at recommending items.</div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <div class="card-heading">Easy to use</div>
+                            <div class="card-text">Only five lines of code are needed to integrate our SDK, so that you can fully focus on your business.</div>
+                        </div>
+                    </div>
+                </div>
+            </div>    
+        </section>
     </main>
 
     <footer>
@@ -90,7 +123,7 @@
                     <div class="footer-heading">About</div>
                     <div class="footer-list">
                         <div class="footer-text">
-                            <a href="#">Reco Engine</a>
+                            <a href="#">Recon Engine</a>
                         </div>
                         <div class="footer-text">
                             <a href="#">Algorithm</a>
