--- a/client/views/docs.html
+++ b/client/views/docs.html
@@ -117,6 +117,14 @@ let recommendations = await recon.recommend(userID);
                     </pre>
                 </div>
 
+                <div class="section-item">
+                    <h2>Examples</h2>
+                    <ul>
+                        <li>frontend with CDN: <a href="https://github.com/moritzmitterdorfer/recon-engine-example">https://github.com/moritzmitterdorfer/recon-engine-example</a></li>
+                        <li>backend with NPM: soon...</li>
+                    </ul>
+                </div>
+
             </div>
         </section>
     </main>
