--- a/client/views/index.html
+++ b/client/views/index.html
@@ -77,7 +77,7 @@
                     </p>
                     <div class="code-container" id="apiKey"></div>
                     <p class="c">
-                        Now, you are raedy to set up the SDK. Follow our <a href="/docs">Docs</a>.
+                        Now, you are ready to set up the SDK. Follow our <a href="/docs">Docs</a>.
                     </p>
                 </div>
             </div>
